--- a/sam/dashboard/website/webserver/templates/userlist.html
+++ b/sam/dashboard/website/webserver/templates/userlist.html
@@ -38,33 +38,50 @@
                 <table class="table table-striped table-bordered table-hover" table-layout=fixed; width=100%; align="center">
                     <thead>
                     <tr>
-                        <th>用户</th>
+                        <!-- <th>用户</th>
                         <th>邮箱</th>
                         <th>状态</th>
                         <th>角色</th>
                         <th>最后登录时间</th>
+                        <th>操作</th> -->
+                        <th>用户</th>
+                        <th>UserUUID</th>
+                        <th>类型</th>                        
                         <th>操作</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for line in user_list %}
+                    {% for line in displayedUsersList %}
                         <tr>
-                            <td>
+                            <!-- <td>
                                 {{ line.username }}
                             </td>
                             <td>
                                 {{ line.email }}
                             </td>
                             <td>
-                                {{ line.is_active }}
+                                {{ line.is_active }}        
                             </td>
                             <td>
                                 {{ line.webserver.user_role }}
                             </td>
                             <td>
                                 {{ line.last_login }}
+                            </td> -->
+                            <td>
+                                {{ line.name }}
                             </td>
+                            <td>
+                                {{ line.UUID }}
+                            </td>
+                            <td>
+                                {{ line.type }}        
+                            </td>
+                            
+                            
                             <td width="120">
+                                <!-- <a href="{% url 'user_alter' line.id %}" class="bianji">编辑</a>
+                                <a href="{% url 'user_listcc' line.id %}" onclick="return delete_sql();" class="shanchu">删除</a> -->
                                 <a href="{% url 'user_alter' line.id %}" class="bianji">编辑</a>
                                 <a href="{% url 'user_listcc' line.id %}" onclick="return delete_sql();" class="shanchu">删除</a>
                                 <script language="JavaScript">
@@ -82,22 +99,23 @@
                     </tbody>
                 </table>
                 <div class="drpage">
-                    {% if user_list.has_previous %}
+                    {% if numDict.hasPreviousPage %}
                         <a href="?page=1" class='fy'>首页</a>&nbsp;
-                        <a href="?page={{ user_list.previous_page_number }}" class='fy'>上一页</a>&nbsp;
+                        <a href="?page={{ numDict.previousPageNum }}" class='fy'>上一页</a>&nbsp;
                     {% endif %}
-                    {% for p in page_range %}
-                    {% ifequal p user_list.number %}
+                    {% for p in pageRange %}
+                    {% ifequal p pageNum %}
                         <span class="fy">{{p}}</span>
                     {% else %}
                         <a href="?page={{p}}" class="fy" style="te;margin: 3px">{{p}}</a>
                     {% endifequal %}
                     {% endfor %}
-                    {% if user_list.has_next %}
-                        <a href="?page={{ user_list.next_page_number }}" class='fy'>下一页</a>&nbsp;
-                        <a href="?page={{ user_list.paginator.num_pages }}" class='fy'>尾页</a>
+                    {% if numDict.hasNextPage %}
+                        <a href="?page={{ numDict.nextPageNum }}" class='fy'>下一页</a>&nbsp;
+                        <a href="?page={{ totalPageNum }}" class='fy'>尾页</a>
                     {% endif %}
-                        <a>[第{{ user_list.number }}/{{ user_list.paginator.num_pages }}页]</a>
+                        <!-- <a>[第{{ user_list.number }}/{{ user_list.paginator.num_pages }}页]</a> -->
+                        <a>[第{{ PageNum }}/{{ totalPageNum }}页]</a>
                 </div>
             </div>
         </div>
