add showZonelist; add showRoutingMorphicList

--- a/sam/dashboard/website/webserver/templates/menu.html
+++ b/sam/dashboard/website/webserver/templates/menu.html
@@ -55,6 +55,20 @@
 					</div>
 				</li>
 				<li class="">
+					<p class="fuMenu">Zone管理</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/zone/list/">Zone管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">RoutingMorphic管理</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/routingmorphic/list/">RoutingMorphic管理</a></p>
+					</div>
+				</li>
+				<li class="">
 					<p class="fuMenu"><a href="/webserver/logout/">退出</a></p>
 				</li>
 			</ul>
