--- a/sam/dashboard/website/webserver/templates/zonelist.html
+++ b/sam/dashboard/website/webserver/templates/zonelist.html
@@ -23,14 +23,9 @@
         <div class="homepage">
             <div class="ptbt"><a>运维平台</a></div>
             <div class="pagename"><a>用户信息列表</a></div>
-            <div class="dangqianweizhi"><a>首页 > 权限系统 > 用户管理</a></div>
+            <div class="dangqianweizhi"><a>首页 > 权限系统 > Zone管理</a></div>
         </div>
-        <div class="user_gncj">
-            <a class="button icon add" href="/webserver/user/add">创建用户</a>
-        </div>
-        <div class="user_gnlb">
-            <a class="button icon home" href="/webserver/user/list/">用户列表</a>
-        </div>
+        
         <div class="user_hr">
         </div>
         <div class="user_list">
@@ -38,47 +33,20 @@
                 <table class="table table-striped table-bordered table-hover" table-layout=fixed; width=100%; align="center">
                     <thead>
                     <tr>
-                        <!-- <th>用户</th>
-                        <th>邮箱</th>
-                        <th>状态</th>
-                        <th>角色</th>
-                        <th>最后登录时间</th>
-                        <th>操作</th> -->
-                        <th>用户</th>
-                        <th>UserUUID</th>
-                        <th>类型</th>                        
-                        <th>操作</th>
+                        <th>Zone</th>
+                        
                     </tr>
                     </thead>
                     <tbody>
-                    {% for line in displayedUsersList %}
+                    {% for line in displayedZonesList %}
                         <tr>
                             <td>
                                 {{ line.name }}
                             </td>
-                            <td>
-                                {{ line.UUID }}
-                            </td>
-                            <td>
-                                {{ line.type }}        
-                            </td>
+                           
                             
                             
-                            <!-- <td width="120">
-                                <!-- <a href="{% url 'user_alter' line.ID %}" class="bianji">编辑</a>
-                                <a href="{% url 'user_listcc' line.ID %}" onclick="return delete_sql();" class="shanchu">删除</a> -->
-                                <a href="{% url 'user_alter' line.ID %}" class="bianji">编辑</a>
-                                <a href="{% url 'user_listcc' line.ID %}" onclick="return delete_sql();" class="shanchu">删除</a>
-                                <script language="JavaScript">
-                                    function delete_sql(){
-                                        if(confirm("您确定要删除吗?")){
-                                            return true;
-                                        }else{
-                                            return false;
-                                        }
-                                    }
-                                </script>
-                            </td> -->
+                            
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -99,7 +67,7 @@
                         <a href="?page={{ numDict.nextPageNum }}" class='fy'>下一页</a>&nbsp;
                         <a href="?page={{ totalPageNum }}" class='fy'>尾页</a>
                     {% endif %}
-                        <!-- <a>[第{{ user_list.number }}/{{ user_list.paginator.num_pages }}页]</a> -->
+                       
                         <a>[第{{ PageNum }}/{{ totalPageNum }}页]</a>
                 </div>
             </div>
