--- a/sam/dashboard/website/webserver/templates/menu.html
+++ b/sam/dashboard/website/webserver/templates/menu.html
@@ -46,12 +46,12 @@
 					</div>
 				</li>
 				<li class="">
-					<p class="fuMenu">权限管理</p>
+					<p class="fuMenu">用户管理</p>
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
 					<div class="div1">
                         <p class="zcd" id="zcd19"><a href="/webserver/user/list/">用户管理</a></p>
-{#						<p class="zcd" id="zcd20"><a href="/webserver/user/role/">角色管理</a></p>#}
-{#						<p class="zcd" id="zcd19"><a href="/webserver/user/power/">权限管理</a></p>#}
+<!-- {#						<p class="zcd" id="zcd20"><a href="/webserver/user/role/">角色管理</a></p>#} -->
+<!-- {#						<p class="zcd" id="zcd19"><a href="/webserver/user/power/">权限管理</a></p>#} -->
 					</div>
 				</li>
 				<li class="">
@@ -66,6 +66,34 @@
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
 					<div class="div1">
                         <p class="zcd" id="zcd19"><a href="/webserver/routingmorphic/list/">RoutingMorphic管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">Server管理</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/server/list/">Server管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">Switch管理</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/switch/list/">Switch管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">Link管理</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/link/list/">Link管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">Request</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/request/list/">Request管理</a></p>
 					</div>
 				</li>
 				<li class="">
