--- a/sam/dashboard/website/webserver/templates/menu.html
+++ b/sam/dashboard/website/webserver/templates/menu.html
@@ -16,10 +16,10 @@
 		</div>
 		<div class="menu_list">
 			<ul>
-				<li class="">
+				<!-- <li class="">
 					<p class="fuMenu"><a href="/webserver/index">首页</a></p>
-				</li>
-				<li class="">
+				</li> -->
+				<!-- <li class="">
 					<p class="fuMenu">资产管理</p>
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
 					<div class="div1">
@@ -37,14 +37,14 @@
                     <div class="div1">
                         <p class="zcd" id="zcd10"><a href="/webserver/cmdb/hostadmin/">批量管理</a></p>
                     </div>
-				</li>
-				<li class="">
+				</li> -->
+				<!-- <li class="">
 					<p class="fuMenu">监控系统</p>
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
 					<div class="div1">
                         <p class="zcd" id="zcd19"><a href="{% url 'monitor' %}">健康状态监控</a></p>
 					</div>
-				</li>
+				</li> -->
 				<li class="">
 					<p class="fuMenu">用户管理</p>
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
@@ -60,7 +60,7 @@
 					<div class="div1">
                         <p class="zcd" id="zcd19"><a href="/webserver/zone/list/">Zone管理</a></p>
 					</div>
-				</li>
+				</li> 
 				<li class="">
 					<p class="fuMenu">RoutingMorphic管理</p>
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
@@ -94,6 +94,27 @@
 					<img class="xiala" src="{% static "img/xiala.png" %}" />
 					<div class="div1">
                         <p class="zcd" id="zcd19"><a href="/webserver/request/list/">Request管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">SFC</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/SFC/list/">SFC管理</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">SFCI</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/SFCI/list/">SFCI</a></p>
+					</div>
+				</li>
+				<li class="">
+					<p class="fuMenu">VNFI</p>
+					<img class="xiala" src="{% static "img/xiala.png" %}" />
+					<div class="div1">
+                        <p class="zcd" id="zcd19"><a href="/webserver/VNFI/list/">VNFI管理</a></p>
 					</div>
 				</li>
 				<li class="">
