--- a/sam/dashboard/website/webserver/templates/SFClist.html
+++ b/sam/dashboard/website/webserver/templates/SFClist.html
@@ -23,7 +23,7 @@
         <div class="homepage">
             <div class="ptbt"><a>运维平台</a></div>
             <div class="pagename"><a>用户信息列表</a></div>
-            <div class="dangqianweizhi"><a>首页 > 权限系统 > Request</a></div>
+            <div class="dangqianweizhi"><a>首页 > 权限系统 > SFC</a></div>
         </div>
         
         <div class="user_hr">
@@ -35,27 +35,27 @@
                     <tr>
                         
                         <th>ID</th>
-                        <th>Request UUID</th>
-                        <th>Request Type</th>
-                        <th>SFC UUID</th>  
+                        <th>Zone Name</th>
+                        <th>SFC UUID</th>
+                        <th>SFCIID list</th>  
                         <th>State</th>                          
                         
                     </tr>
                     </thead>
                     <tbody>
-                    {% for line in displayedSwitchsList %}
+                    {% for line in displayedSFCsList %}
                         <tr>
                             <td>
                                 {{ line.ID }}
                             </td>
                             <td>
-                                {{ line.requestUUID }}
-                            </td>
-                            <td>
-                                {{ line.requestType }}
+                                {{ line.zoneName }}
                             </td>
                             <td>
                                 {{ line.SFC_UUID }}
+                            </td>
+                            <td>
+                                {{ line.SFCIIDList }}
                             </td>
                             <td>
                                 {{ line.state }}
