add SFCI list and VNFI list display for dashboard

--- a/sam/dashboard/website/webserver/templates/VNFIlist.html
+++ b/sam/dashboard/website/webserver/templates/VNFIlist.html
@@ -42,7 +42,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for line in displayedSFCsList %}
+                    {% for line in displayedVNFIsList %}
                         <tr>
                             <td>
                                 {{ line.ID }}
