--- a/sam/dashboard/website/webserver/templates/routingmorphiclist.html
+++ b/sam/dashboard/website/webserver/templates/routingmorphiclist.html
@@ -22,7 +22,7 @@
     <div class="home_right">
         <div class="homepage">
             <div class="ptbt"><a>运维平台</a></div>
-            <div class="pagename"><a>用户信息列表</a></div>
+            <div class="pagename"><a>Routing Morphic列表</a></div>
             <div class="dangqianweizhi"><a>首页 > 权限系统 > RoutingMorphic管理</a></div>
         </div>
         
