modified VNFItype display

--- a/sam/dashboard/website/webserver/templates/routingmorphiclist.html
+++ b/sam/dashboard/website/webserver/templates/routingmorphiclist.html
@@ -68,7 +68,7 @@
                         <a href="?page={{ totalPageNum }}" class='fy'>尾页</a>
                     {% endif %}
                        
-                        <a>[第{{ PageNum }}/{{ totalPageNum }}页]</a>
+                        <a>[第{{ pageNum }}/{{ totalPageNum }}页]</a>
                 </div>
             </div>
         </div>
